--- a/src/ulp/Vistas/RegistroAlumnos.form
+++ b/src/ulp/Vistas/RegistroAlumnos.form
@@ -115,7 +115,7 @@
                   <Component id="jPanel2" min="-2" pref="286" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="10" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
